[package]
name = "truncate_on_white_space"
version = "1.0.0"
authors = ["Todd Kennedy <todd@selfassembled.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Truncate a &str at the closest whitespace to a specified length with unicode safety"
homepage = "https://github.com/toddself/tows"
readme = "README.md"
repository = "https://github.com/toddself/tows"
keywords = ["strings", "truncate", "whitespace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
