[package]
name = "truncate_string_at_whitespace"
version = "1.0.2"
authors = ["Todd Kennedy <todd@selfassembled.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Truncate a &str at the closest whitespace to a specified length with unicode safety"
homepage = "https://github.com/toddself/truncate_string_at_whitespace"
readme = "README.md"
repository = "https://github.com/toddself/truncate_string_at_whitespace"
keywords = ["strings", "truncate", "whitespace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
